# mol

./: .gitignore  MANIFEST.in  Makefile  README.md  meson.build  pyproject.toml  test.py
.github/workflows/: upload_wheels.sh  wheels.yaml
mol/: __init__.py
mol/some/: Makefile  __init__.py  somefile.cpp  somefile.h  somelib.py
