[project]
name = "testmol"
version = "0.0.5"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11.0,<3.14.0"

dependencies = []

[build-system]
requires = ['meson', 'meson-python', 'cython']
build-backend = 'mesonpy'

[tool.meson-python.args]
setup = [
  '--default-library=static',
  '-Doptimization=3',
]