[project]
name = "modlib"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11.0,<3.14.0"

dependencies = []

[build-system]
requires = ['meson', 'meson-python', 'cython']
build-backend = 'mesonpy'

[tool.meson-python.args]
setup = [
  '--default-library=static',
  '-Doptimization=3',
]